--- a/pantallas/css/item.css
+++ b/pantallas/css/item.css
@@ -1,20 +1,27 @@
-.galeria {
+#galeria {
     max-width: 100%;
+    padding-bottom: 2rem;
 
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+
+    border: 1px solid black;
 }
 
 
 .item {
-    width: 15rem;
+    width: 95%;
     border-radius: 5px;
     margin-top: 3rem;
+    border: 1px solid rgb(235, 233, 233);
 
     -webkit-box-shadow: 3px 4px 5px 0px rgba(204,204,204,1);
     -moz-box-shadow: 3px 4px 5px 0px rgba(204,204,204,1);
     box-shadow: 3px 4px 5px 0px rgba(204,204,204,1);
+
+    display: flex;
+    position: relative;
 }
 
 .cj_img {
@@ -35,13 +42,23 @@
     padding: 0.5rem 0.5rem;
 }
 .precio {
-    display: block;
-    width: 100%;
-    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 8rem;
+    height: 4rem;
+    font-size: 1.8rem;
     font-weight: 600;
     text-align: right;
     padding: 0.5rem 0.5rem;
-    border-radius: 0px 0px 5px 5px;
+    border-radius: 0px 0px 5px 0px;
 
     background-color: rgb(255, 202, 26);
+
+    position: absolute;
+    bottom: 0;
+    right: 0;
+
+
 }
